# piscine_python

./: README.md
module00/ex2/: ft_harvest_total.py
module00/ex3/: ft_plant_age.py
module00/ex4/: ft_water_reminder.py
module00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module00/ex6/: ft_garden_summary.py
module00/ex7/: ft_seed_inventory.py
module01/ex0/: ft_garden_intro.py
module01/ex1/: ft_garden_data.py
module01/ex2/: ft_plant_growth.py
module01/ex3/: ft_plant_factory.py
module01/ex4/: ft_garden_security.py
module01/ex5/: ft_plant_types.py
module01/ex6/: ft_garden_analytics.py
module02/ex0/: ft_first_exception.py
module02/ex1/: ft_different_errors.py
module02/ex2/: ft_custom_errors.py
module02/ex3/: ft_finally_block.py
module02/ex4/: ft_raise_errors.py
module02/ex5/: ft_garden_management.py
module03/ex0/: ft_command_quest.py
module03/ex1/: ft_score_analytics.py
module03/ex2/: ft_coordinate_system.py
module03/ex3/: ft_achievement_tracker.py
module03/ex4/: ft_inventory_system.py
module03/ex5/: ft_data_stream.py
module03/ex6/: ft_analytics_dashboard.py
module04/: sample_data.json
module04/ex0/: ft_ancient_text.py
module04/ex1/: ft_archive_creation.py
module04/ex2/: ft_stream_management.py
module04/ex3/: ft_vault_security.py
module04/ex4/: ft_crisis_response.py
module05/ex0/: stream_processor.py
module06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py  ft_sacred_scroll.py.py
module08/ex1/: loading.py  pyproject.toml  requirements.txt
(+42 files in other folders)
