[tool.poetry]
name = "python-module-08"
version = "1.0.0"
description = "Data processing and package dependencies test"
authors = ["julcleme <julcleme@student.42lyon.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
requests = "^2.0"
matplotlib = "^3.5"
numpy = "^1.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
